--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "simple_projects",
   "version": "1.0.0",
   "description": "VARtwotcha",
-  "main": "app.js",
+  "main": "app1.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app1.js"
   },
   "author": "Vedupaji",
   "license": "ISC",
